Remove spacing on 320px screens to avoid header overflow with certain configurations

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -47,7 +47,9 @@
 }
 
 .home {
-  margin-right: 32px;
+  @media (--small) {
+    margin-right: 32px;
+  }
   text-decoration: none;
   transition: color .5s ease-in .1s;
   display: flex;
